--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -107,7 +107,7 @@
                             @*@Html.ActionLink("Edit", "Edit", new {id = item.RequisitionId}) |*@
                             @Html.ActionLink("Details", "Details", new {id = item.Requisition.Id}, new { @class = "btn btn-primary" }) &nbsp; &nbsp;
                             @Html.ActionLink("Print & Preview", "PrintDetails", new { id = item.RequisitionId }, new { @class = "btn btn-primary" }) &nbsp; &nbsp;
-                            @Html.ActionLink("CheckOut", "CheckOut", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
+                            @Html.ActionLink("CheckIn", "CheckIn", "GatePass", new { id = item.Id }, new { @class = "btn btn-primary" })
 
                         </td>
                     </tr>
