--- a/RMS.App/Views/Home/Index.cshtml
+++ b/RMS.App/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1> Requisition Management System </h1>
     <br/>
     <br/>
-    <p class="lead">
+    <p class="lead text-justify">
         Save time and eliminate paperwork by automating the requisition Process.
         Authorize Users can submit their requisition by using web Interface.
         Automate the entire process including Requisition which is currently doing by Paperwork.
@@ -19,35 +19,43 @@
 <div class="row">
     <div class="col-md-4">
         <h4>Overview of Functional Requirements</h4>
-        <p>
+        <br/>
+        <p class="text-justify">
             Authorized users must be able to login with their identification number or user name and password.
             After a successful login the user only view and do an operation which is authorized by the system controller.
             After the login user (Employee) may do some operations, Like- submit a request, view request, Delete or cancel the request, etc.
             After the login user (Vehicle Controller) may do some operations, Like- approve a request, assign vehicle on request, cancel or delete request, etc.
 
         </p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="#">Learn more &raquo;</a>
+        </p>
     </div>
     <div class="col-md-4">
         <h4>Mission & Vision </h4>
-        <p>
+        <br/>
+        <p class="text-justify">
             Enable Requisition to focus on strategic objectives and realize operational efficiencies with technology that promotes great user experience.
 
             Vision:
 
             To establish e-requisition as the go-to provider with innovative and affordable regional solutions.
         </p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="#">Learn more &raquo;</a>
+        </p>
     </div>
     <div class="col-md-4">
         <h4>Scope of the System</h4>
-        <p>
-
-    The project aims at providing an efficient interface to the BCC for managing their vehicle requisition based on current manual process in automate. The basic idea involved here is that vehicle and employee, driver are stored in a database. When system get a requisition request, the system analyzes the schedule, vehicle, availability of driver in database and send it to the vehicle manager (admin) for approval.
-
-    We also propose to include a feature “Feedback”. This feature keeps track of any objection from vehicle user or any inquiry to the vehicle manager and also from vehicle manager to the vehicle user about any instruction.
-.
+        <br/>
+        <p class="text-justify">
+            The project aims at providing an efficient interface to the BCC for managing their vehicle requisition based on current manual process in automate. The basic idea involved here is that vehicle and employee, driver are stored in a database. 
+            When system get a requisition request, the system analyzes the schedule, vehicle, availability of driver in database and send it to the vehicle manager (admin) for approval.
+            We also propose to include a feature “Feedback”. This feature keeps track of any objection from vehicle user or any inquiry to the vehicle manager and also from vehicle manager to the vehicle user about any instruction.
+            .
         </p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+        <p>
+            <a class="btn btn-default" href="#">Learn more &raquo;</a>
+        </p>
     </div>
 </div>
