--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -14,32 +14,16 @@
 <div class="container">
     <h2>New Requests List</h2>
     <hr />
-    @*<div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
-                <p>
 
-                </p>
-            </div>
-
-            <div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
-                <p>
-                    @using (Html.BeginForm("Requests", "AssignRequisitions", FormMethod.Get))
-                    {
-                        <b>Search by ( Requisition Number ) </b>
-                        @Html.TextBox("searchText")
-                        <input type="submit" value="Search" />
-                    }
-                </p>
-            </div>
-        </div>
-    </div>*@
 
     <table id="example" class="table table-striped table-bordered table-hover dt-responsive nowrap" style="width: 100%">
         <thead>
             <tr class="bg-info">
                 <th>
                     SL
+                </th>
+                <th>
+                    Action
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.StatusType)
@@ -80,9 +64,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
                 </th>
-                <th class="text-center">
-                    Action
-                </th>
+                
             </tr>
         </thead>
         <tbody>
@@ -96,6 +78,12 @@
                     <tr>
                         <td>
                             @sl
+                        </td>
+                        <td>
+                            @Html.ActionLink("Assign Requisition", "Create", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-primary btn-sm" }) &nbsp;
+                            @Html.ActionLink("View", "ViewDetails", new { id = item.RequisitionId }, new { @class = "btn btn-info btn-sm" }) &nbsp;
+                            @Html.ActionLink("Cancel Requisition", "Create", "CancelRequisition", new { statusId = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
+
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.StatusType)
@@ -112,10 +100,10 @@
                         </td>
                         
                         <td>
-                            @Html.DisplayFor(model => item.Requisition.StartDateTime)
+                            @item.Requisition.StartDateTime.ToString("dd MMM yyyy hh:mm tt")
                         </td>
                         <td>
-                            @Html.DisplayFor(model => item.Requisition.EndDateTime)
+                            @item.Requisition.EndDateTime.ToString("dd MMM yyyy hh:mm tt")
                         </td>
                         <td>
                             @Html.DisplayFor(model => item.Requisition.FromPlace)
@@ -127,14 +115,9 @@
                             @Html.DisplayFor(model => item.Requisition.Description)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Requisition.SubmitDateTime)
+                            @item.Requisition.SubmitDateTime.ToString("dd MMM yyyy hh:mm tt")
                         </td>
-                        <td class="text-right">
-                            @Html.ActionLink("Assign Requisition", "Create", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-primary btn-sm" }) &nbsp;
-                            @Html.ActionLink("View", "ViewDetails", new { id = item.RequisitionId }, new { @class = "btn btn-info btn-sm" }) &nbsp;
-                            @Html.ActionLink("Cancel Requisition", "Create","CancelRequisition", new { statusId = item.Id }, new { @class = "btn btn-outline-danger btn-sm" })
-
-                        </td>
+                        
                     </tr>
                 }
             }
@@ -144,6 +127,9 @@
             <tr class="bg-secondary text-white">
                 <th>
                     SL
+                </th>
+                <th>
+                    Action
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.StatusType)
@@ -184,9 +170,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Requisition.SubmitDateTime)
                 </th>
-                <th class="text-center">
-                    Action
-                </th>
+                
             </tr>
         </tfoot>
     </table>
