--- a/RMS.App/Views/CancelRequisition/Create.cshtml
+++ b/RMS.App/Views/CancelRequisition/Create.cshtml
@@ -18,92 +18,103 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
+            
+            @Html.LabelFor(model => model.StatusType, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
+                @Html.EditorFor(model => model.StatusType, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
+                @Html.ValidationMessageFor(model => model.StatusType, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
+            
+            @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
+                @Html.EditorFor(model => model.RequisitionNumber, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
+                @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.Requisition.Employee.FullName, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-5">
+            
+            @Html.LabelFor(model => model.Requisition.Employee.FullName, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.Requisition.Employee.FullName, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
                 @Html.ValidationMessageFor(model => model.Requisition.Employee.FullName, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.Requisition.Employee.Designation.Title, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-5">
+            
+            @Html.LabelFor(model => model.Requisition.Employee.Designation, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.Requisition.Employee.Designation.Title, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
                 @Html.ValidationMessageFor(model => model.Requisition.Employee.Designation.Title, "", new {@class = "text-danger"})
             </div>
         </div>
-
         <div class="form-group row">
-            @Html.LabelFor(model => model.Requisition.FromPlace, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-5">
+            
+            @Html.LabelFor(model => model.Requisition.FromPlace, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.Requisition.FromPlace, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
                 @Html.ValidationMessageFor(model => model.Requisition.FromPlace, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.Requisition.DestinationPlace, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-5">
+            
+            @Html.LabelFor(model => model.Requisition.DestinationPlace, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.Requisition.DestinationPlace, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
                 @Html.ValidationMessageFor(model => model.Requisition.DestinationPlace, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.Requisition.RequisitionType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.Requisition.RequisitionType, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.Requisition.RequisitionType, "", new { @class = "text-danger" })
+            
+            @Html.LabelFor(model => model.Requisition.RequisitionType, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
+                @Html.EditorFor(model => model.Requisition.RequisitionType, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
+                @Html.ValidationMessageFor(model => model.Requisition.RequisitionType, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.Requisition.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.Requisition.Description, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
-                @Html.ValidationMessageFor(model => model.Requisition.Description, "", new { @class = "text-danger" })
+            
+            @Html.LabelFor(model => model.Requisition.Description, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
+                @Html.EditorFor(model => model.Requisition.Description, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
+                @Html.ValidationMessageFor(model => model.Requisition.Description, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group row" hidden="hidden">
+
+            @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
+                @Html.EditorFor(model => model.RequisitionId, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.RequisitionId, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.Reason, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-5">
+            
+            @Html.LabelFor(model => model.Reason, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-9">
                 @Html.EditorFor(model => model.Reason, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.Reason, "", new {@class = "text-danger"})
             </div>
         </div>
-        <div class="form-group row" hidden="hideen">
-            @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-5">
-                @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        
 
         <div class="form-group row">
-            <div class="col-md-2"></div>
-            <div class="col-md-5">
-                <input type="submit" value="Cancel" class="btn btn-warning" /> &nbsp;
-                @Html.ActionLink("Back to List", "Requests", null, new { @class = "btn btn-info" })
+            
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
+                <input type="submit" value="Cancel Requisition" class="btn btn-warning"/> &nbsp;
+                @Html.ActionLink("Back to List", "Requests", "AssignRequisitions", null, new {@class = "btn btn-info"})
             </div>
         </div>
+
     </div>
 }
 
