--- a/RMS.App/Views/Home/About.cshtml
+++ b/RMS.App/Views/Home/About.cshtml
@@ -7,13 +7,15 @@
     <h1> Welcome To Requisition Management System</h1>
     <br />
     <br />
-    <p>
+    <p class="text-justify">
         One of the activities of Bangladesh Computer Council (BCC) is to develop trained manpower in the field of ICT through ICT training. In the year of 2005, with the technical and financial assistance of government of Korea through Korean International Cooperation Agency (KOICA). Bangladesh Computer Council established “Bangladesh Korea Institute of Information and Communication Technology (BKIICT)”, an international-standard ICT training institute, housed on the ground floor of BCC Bhaban at Sher-e-Bangla Nagar in the capital.
 
         Bangladesh Korea Institute of Information and Communication technology (BKIICT) is a newly established modern ICT Institute fully equipped h with State-of-art technology for industry standard Human resources Development in ICT to meet the National and International market demand.
     </p>
-    <p>
+    <p class="text-justify">
         BCC aims at under privileged section of the society, physically challenged people and women to include them in the main stream of the development by making ICT skilled. Presently BCC runs following programs to fulfill that objective
     </p>
-    <p><a href="#" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p>
+        <a href="#" class="btn btn-primary btn-lg">Learn more &raquo;</a>
+    </p>
 </div>
