--- a/RMS.App/Views/Requisitions/Create.cshtml
+++ b/RMS.App/Views/Requisitions/Create.cshtml
@@ -113,20 +113,35 @@
                         <td>
                             @if (@item.StatusType == "New")
                             {
-                                @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId }, new { @class = "btn btn-warning btn-sm" })<span> </span>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.RequisitionId }, new { @class = "btn btn-warning btn-sm" })
                             }
 
-                            @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-success btn-sm" }) <span> </span>
+                            @Html.ActionLink("Details", "Details", new { id = item.Requisition.Id }, new { @class = "btn btn-success btn-sm" })
 
                             @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id }, new { @class = "btn btn-info btn-sm" })
 
                         </td>
                         <td>@item.Requisition.FromPlace</td>
                         <td>@item.Requisition.DestinationPlace</td>
-                        <td>@item.Requisition.StartDateTime</td>
-                        <td>@item.Requisition.EndDateTime</td>
-                        <td class="text-danger">@item.StatusType</td>
-                        <td>@item.Requisition.SubmitDateTime</td>
+                        <td>@item.Requisition.StartDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
+                        <td>@item.Requisition.EndDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
+                        @if (@item.StatusType=="New") 
+                        {
+                            <td class="text-primary">@item.StatusType</td>
+                        }
+                        @if (@item.StatusType == "Cancelled")
+                        {
+                            <td class="text-danger">@item.StatusType</td>
+                        }
+                        @if (@item.StatusType == "Completed")
+                        {
+                            <td class="text-success">@item.StatusType</td>
+                        }
+                        @if (@item.StatusType == "OnExecute")
+                        {
+                            <td class="text-info">@item.StatusType</td>
+                        }
+                        <td>@item.Requisition.SubmitDateTime.ToString("dd MMM yyyy hh:mm tt")</td>
                         <td>@item.Requisition.RequisitionType</td>
                         <td>@item.Requisition.RequestFor</td>
                         <td>@item.Requisition.Description</td>
