--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -106,7 +106,7 @@
                 </div>
             </div>
 
-            <div class="form-group row">
+            <div class="form-group row" hidden="hidden">
                 @Html.LabelFor(model => model.SubmitDateTime, htmlAttributes: new {@class = "control-label col-md-3"})
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.SubmitDateTime, new {htmlAttributes = new {@class = "form-control", @readonly = "readonly"}})
