--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RMS.App.ViewModels.RequisitionStatusViewModel
 
 @{
-    ViewBag.Title = "Check-Out";
+    ViewBag.Title = "Check-In";
 }
 
 <h2>Check-In</h2>
