--- a/RMS.App/Views/Home/AboutDeveloper.cshtml
+++ b/RMS.App/Views/Home/AboutDeveloper.cshtml
@@ -26,7 +26,7 @@
         <div class="col-md-9">
             <div id="demo1" class="row collapse clearfix">
                 <div class="col-md-12">
-                    <h3 class="text-center">Parvez Ahmed</h3>
+                    <h3 class="text-center">Md. Enamul Hoque (Parvez)</h3>
                     <br/>
                 </div>
                 <div class="col-md-3 float-left">
